<resources>
    <string name="app_name">TrueClaims</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="common_strOk">Ok</string>
    <string name="common_strCancel">Cancel</string>
    <string name="common_ok">Ok</string>
    <string name="validation_internetoffline">Internet appears to be offline. Please check your internet connection.</string>
    <string name="welcome_getstarted">GET STARTED</string>
    <string name="welcome_strWelcome">Welcome to the</string>
    <string name="welcome_strTrueSolicitorsText">TRUE Solicitors Claims App</string>
    <string name="welcome_strSendInstant">Send instant messages to your\n TRUE Advisor.</string>
    <string name="homescreen_strwelcome">Welcome to TRUE.</string>
    <string name="homescreen_strToGetApp">To get the most from this app&lt;br \\&gt;please &lt;font color=\'#A9535A\'&gt;&lt;b&gt;link your claim&lt;/b&gt;&lt;/font&gt; below.</string>
    <string name="homescreen_strLinktoclaim">LINK TO MY CLAIM</string>
    <string name="homescreen_strReportClaim">REPORT A NEW CLAIM</string>
    <string name="homescreen_strAboutus">About Us</string>
    <string name="homescreen_strShareThisApp">Share this App</string>
    <string name="homescreen_strFAQ">FAQ\'s</string>
    <string name="homescreen_strClaimNumber">YOUR CLAIM</string>
    <string name="linkyourclaim_header">Link your claims</string>
    <string name="linkyourclaim_strAccessClaimDesc">In order to access your claim\nplease enter your:</string>
    <string name="linkyourclaim_hintclaimnumber">Claim number e.g. 123400</string>
    <string name="linkyourclaim_hintclaimdob">Date of Birth e.g. 1976-07-22</string>
    <string name="linkyourclaim_link">Link</string>
    <string name="linkyourclaim_claimexists">This claim number is already exists.</string>
    <string name="linkyourclaim_resetsecurity">Reset your security code</string>
    <string name="linkyourclaim_resetsecuritydesc">Please enter your Claim Number\nand Date of Birth to reset:</string>
    <string name="linkyourclaim_wrongdate">Enter valid date.</string>
    <string name="dialogsuccess_strMessageHeader">Welcome to,&#160;</string>
    <string name="message_strNewMessage">NEW</string>
    <string name="message_strFirstMessage">You TRUE Advisor is in the process of starting your claim.\n\nIn the meantime, thank you for linking your Claim to the\nTRUE app. We look forward to helping your settle your claim in the fastest and easiest way possible.\n\nThis app will help us achieve that.\nYou will be notified as soon as an update is available to you.</string>
    <string name="message_validation_newmessagesuccess">Your message send successfully.</string>
    <string name="myfolder_strMyFolderHeader">My Folder</string>
    <string name="dialogsuccess_strFolderHeader">Welcome to My Folder</string>
    <string name="dialogsuccess_strFolderDesc">This is where you can store,\n view and respond to the\ndocuments we send you.</string>
    <string name="myfolder_strEmptyFolder">Your Folder is currently empty.</string>
    <string name="myfolder_strNotifyDoc">we will notify you when a new\ndocument has been sent to you for\nyou to review.</string>
    <string name="myfolder_strtempDocText">Moday 11th April\nDear Mr Harris,\n\nLorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.\nNam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes </string>
    <string name="myfolder_strNext">NEXT</string>
    <string name="validation_docnotfound">Document not found</string>
    <string name="passcode_header">Create Passcode</string>
    <string name="passcode_strForSecurity">For Your Security</string>
    <string name="passcode_strPasscodeDesc">Please create 4 digit passcode\nto access Your Folder.</string>
    <string name="passcode_strRememberMe">REMEMBER ME</string>
    <string name="passcode_strNeedtoenter">You will need to enter this each time</string>
    <string name="passcode_strCreatePasscode">Create passcode</string>
    <string name="dialog_strPasscodeSaved">Passcode Saved!</string>
    <string name="dialog_strPasscodeDesc">Please make sure you\nremember your 4 digit\n passcode</string>
    <string name="dialog_strpasswordenter_header">Please enter your personal\n4 digit passcode.</string>
    <string name="dialog_strValidPassword">Enter valid password.</string>
    <string name="passcode_strSave">SAVE</string>
    <string name="passcode_strSubmit">SUBMIT</string>
    <string name="passcode_forgotpwd">Forgotten passcode?</string>
    <string name="passcode_enterpasscode">Enter passcode</string>
    <string name="dialog_confirmRead_header">Confirm Document</string>
    <string name="dialog_confirmRead_confirmread">Confirm Read</string>
    <string name="dialog_confirmRead_readLater">Read again later</string>
    <string name="dialog_confirmRead_strConfirm">Confirm</string>
    <string name="dialog_confirmRead_strCancel">Cancel</string>
    <string name="agreefile_strDesc">Please confirm if you agree with\nthe recommendation we have\nmade in this document?</string>
    <string name="agreefile_strIAgree">I Agree</string>
    <string name="agreefile_strIDoNoAgree">I Do Not Agree</string>
    <string name="agreefile_strIncludeMsg">Include a message to TRUE?</string>
    <string name="validation_agreedissagree">Please select action for Agree or Disagree.</string>
    <string name="agreefile_strMessageSend">Submit</string>
    <string name="agreefile_strSendMessageHint">Enter the message.</string>
    <string name="agreefile_strMessageCancel">Cancel</string>
    <string name="newMessage_strheader">New message to TRUE</string>
    <string name="newMessage_strSend">SEND</string>
    <string name="newMessage_strTo">TO: </string>
    <string name="aboutus_strAboutus">About US</string>
    <string name="faq_strFaq">FAQ\'s</string>
    <string name="more_strHeader">More</string>
    <string-array name="faq_questionlist">
        <item>Can I make a claim? </item>
        <item>How long do I have to make a claim?</item>
        <item>What can I claim for?</item>
        <item>How much compensation will I receive?</item>
        <item>How much will it cost me to make a claim?</item>
        <item>What do I have to pay if I lose?</item>
        <item>What do I have to pay if I’m successful?</item>
        <item>How long will my claim take to settle?</item>
        <item>What is  the  process of claiming/what happens next? </item>
        <item>Do I have to attend your office? </item>
        <item>Will I have to attend for a medical examination?</item>
        <item>How far will I have to travel to see a medical expert?</item>
        <item>What happens after the medical examination?</item>
        <item>Will I have to pay for treatment arranged by True?</item>
        <item>What happens after I accept an offer?</item>
        <item>Can I still bring a claim if the accident was partly my fault?</item>
        <item>Will I still get compensation if the other party is not insured?</item>
        <item>Will I get compensation if I am the victim of a hit and run accident?</item>
        <item>Will I lose my job if I make a claim against my employer?</item>
        <item>Can a child make a claim?</item>
        <item>What if I receive an offer directly from the other side?</item>
        <item>Will I have to go to court?</item>
        <item>What type of personal injury claims can we help you with?</item>
        <item>Why TRUE Solicitors?</item>
    </string-array>
    <string name="more_abouttrue">About TRUE</string>
    <string name="more_whytrue">Why TRUE?</string>
    <string name="more_typeofinjuries">Type of Injuries</string>
    <string name="more_contact">Contact</string>
</resources>