<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/agreefilelinearcontent1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/agreefilelinearheader1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:src="@drawable/android_true_document_logo" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/agreefilelinearheader2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/agreefiletxtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/agreefile_strDesc"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_18dp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/agreefilelinearcontent2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              >

                <RadioButton
                    android:id="@+id/agreefile_radioAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agreefile_strIAgree"
                    android:button="@drawable/selector_agree_btn_radio"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:textColor="@color/color_black" />

                <RadioButton
                    android:id="@+id/agreefile_radioDoNotAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp" 
                     android:button="@drawable/selector_agree_btn_radio"
                    android:text="@string/agreefile_strIDoNoAgree"
                    android:textColor="@color/color_black" />
            </RadioGroup>

            <RadioButton
                android:id="@+id/agreefile_radioInclude"
                android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_5dp"
                android:layout_height="wrap_content" 
                    android:button="@drawable/selector_agree_btn_radio"
                android:text="@string/agreefile_strIncludeMsg"
                android:textColor="@color/color_black" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>