<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background"
    android:orientation="vertical" >

    <include
        layout="@layout/dummy_homescreenview"
        android:visibility="invisible" />

    <include
        layout="@layout/dummy_home_listheight"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/homescreen_releativeIconView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15dp" >

        <ImageView
            android:id="@+id/homescreen_imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/android_true_document_logo" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/homescreen_sharedesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/margin_7dp"
        android:paddingTop="@dimen/margin_7dp" >

        <Button
            android:id="@+id/linkyourclaims_txtAboutus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/homescreen_strAboutus"
            android:textColor="@color/color_drakred"
            android:textSize="@dimen/font_18dp" />

        <Button
            android:id="@+id/linkyourclaims_txtShareApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/homescreen_strShareThisApp"
            android:textColor="@color/color_drakred"
            android:textSize="@dimen/font_18dp" />

        <Button
            android:id="@+id/linkyourclaims_txtFAQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/homescreen_strFAQ"
            android:textColor="@color/color_drakred"
            android:textSize="@dimen/font_18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/homescreen_sharedesc"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/homescreen_releativeIconView"
        android:layout_marginTop="@dimen/margin_15dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/homescreen_rltvList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/homescreen_listclims"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:divider="@null"
                android:layout_marginRight="@dimen/margin_5dp"
                android:background="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:dividerHeight="@dimen/home_welcome_headerspacingbottom"
                android:paddingTop="@dimen/margin_5dp" >
            </ListView>

            <LinearLayout
                android:id="@+id/homescreen_lnrdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
              
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/homescreen_txtWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_10dp"
                    android:text="@string/homescreen_strwelcome"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/homescreen_txtTrueSolicitors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/homescreen_txtWelcome"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin_10dp"
                    android:paddingRight="@dimen/margin_10dp"
                    android:paddingTop="@dimen/margin_10dp"
                    android:text="@string/homescreen_strToGetApp"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/font_20dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/homescreen_linearmain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/homescreen_btnLinkToClaim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:background="@drawable/shape_box_red"
                    android:drawableLeft="@drawable/link_icon_home"
                    android:drawableRight="@drawable/right_arrow_red_icon"
                    android:padding="@dimen/home_welcome_buttonpadding"
                    android:text="@string/homescreen_strLinktoclaim"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/font_16dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/homescreen_btnReportClaim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:background="@drawable/shape_box_red"
                    android:drawableLeft="@drawable/report_claim_home"
                    android:drawableRight="@drawable/right_arrow_red_icon"
                    android:padding="@dimen/home_welcome_buttonpadding"
                    android:text="@string/homescreen_strReportClaim"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/font_16dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>