<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_gravity="center_horizontal|center_vertical"
    
    android:background="@drawable/rounded_corner_white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/dialog_fileread_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/margin_5dp"
                android:layout_centerVertical="true"
                android:src="@drawable/warning" />

            <TextView
                android:id="@+id/dialog_fileread_txtConfirmDoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="left"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_30dp"
                android:text="@string/dialog_confirmRead_header"
                android:textColor="@color/color_darkerblue"
                android:textSize="@dimen/font_22dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_darkerblue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/margin_5dp"
       android:layout_marginBottom="@dimen/margin_5dp"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/dialog_fileread_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/dialog_fileread_radioconfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:text="@string/dialog_confirmRead_confirmread"
                   android:textColor="@color/color_black"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/dialog_fileread_radioReadLater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:text="@string/dialog_confirmRead_readLater"
                   android:textColor="@color/color_black"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_grey"
            android:paddingTop="@dimen/margin_10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dialog_fileread_btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 android:background="@android:color/transparent"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:text="@string/dialog_confirmRead_strCancel"
               
                android:textSize="@dimen/font_18dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_grey" />

            <Button
                android:id="@+id/dialog_fileread_btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
           
                android:layout_weight="1"
                  android:background="@android:color/transparent"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:text="@string/dialog_confirmRead_strConfirm"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_18dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>