<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/moreoption_rltvAboutTrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_7dp"
        android:paddingLeft="@dimen/margin_15dp"
        android:paddingRight="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_7dp" >

        <TextView
            android:id="@+id/more_txtAboutTrue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_15dp"
            android:text="@string/more_abouttrue"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_greyseprator" />

    <RelativeLayout
        android:id="@+id/moreoption_rltvWhyTrue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_7dp"
        android:paddingLeft="@dimen/margin_15dp"
        android:paddingRight="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_7dp" >

        <TextView
            android:id="@+id/more_txtWhyTrue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_15dp"
            android:text="@string/more_whytrue"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_greyseprator" />

    <RelativeLayout
        android:id="@+id/moreoption_rltvTypeofInjuries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_7dp"
        android:paddingLeft="@dimen/margin_15dp"
        android:paddingRight="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_7dp" >

        <TextView
            android:id="@+id/more_txtTypeofInjuries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_15dp"
            android:text="@string/more_typeofinjuries"
            android:textColor="@color/color_black"
            android:textSize="@dimen/font_18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_greyseprator" />

    <RelativeLayout
        android:id="@+id/moreoption_rltvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_7dp"
        android:paddingLeft="@dimen/margin_15dp"
        android:paddingRight="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_7dp" >

        <TextView
            android:id="@+id/more_txtContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_15dp"
            android:text="@string/more_contact"
            android:textColor="@color/more_contactcolor"
            android:textSize="@dimen/font_18dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/color_greyseprator" />

</LinearLayout>